--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
                         <a href="#" class="subheader_logo"><img src="icons/logo.png" alt="Logo_uber"></a>
                         <div class="subheader_official">Официальный партнер Uber в Москве</div>
                     </div>
-                    <div class="col-md-2 offset-md-2">
+                    <div class="col-md-3 offset-md-1 col-xl-2 offset-xl-2">
                         <div class="subheader_call">
                             Звоните нам ежедневно
                         </div>
@@ -427,13 +427,13 @@
             <div>
                 <div class="footer_mobile">
                     <a href="#">
-                        <img src="img/app_store.png" alt="App Store">
+                        <img src="./img/app_store.png" alt="App Store">
                     </a>
                     <a href="#">
-                        <img src="img/google_play.png" alt="Google play">
+                        <img src="./img/google_play.png" alt="Google play">
                     </a>
                     <a href="#">
-                        <img src="img/windows_store.png" alt="Windows store">
+                        <img src="./img/windows_store.png" alt="Windows store">
                     </a>
                 </div>
             </div>
